--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -42,7 +42,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [17.x, 18.x, 19.x]
+        node-version: [15.14, 16.x, 17.x, 18.x, 19.x]
 
     steps:
       - name: Checkout the latest code
